# kafka-mlops-agent-pipeline

./: Makefile  README.md  kafka-news.code-workspace  main.py  pyproject.toml
dashboard/: .gitignore  Dockerfile  README.md  pyproject.toml
dashboard/dashboard_app/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/ui/: kafka_tail.py  services.py  tests.py  views.py
dashboard/ui/templates/: base.html  dashboard.html
frontend/: README.md
infra/: Makefile  compose.yml  configuration
infra/docker-compose/: Makefile  compose.yml
infra/k8s/: Chart.yaml  Makefile  README.md  values.yaml
infra/k8s/dashboard/: deployment.yaml
infra/k8s/kafka/: deployment.yaml
infra/k8s/llm-server/: deployment.yaml
infra/k8s/mastodon-fetcher/: deployment.yaml
infra/k8s/metrics-processor/: deployment.yaml
infra/k8s/templates/: _helpers.tpl  dashboard.yaml  kafka.yaml  llm-server.yaml  mastodon-fetcher.yaml  metrics-processor.yaml
kafka-broker/: README.md
llm-server/: Dockerfile  README.md  start_ollama.sh
llm-server/ollama/: Dockerfile  README.md
localstack/: README.md
mastodon-fetcher/: .gitignore  Dockerfile  README.md  constants.py  fetcher.py  main.py  pyproject.toml  secrets.py  sender.py  server.py
mastodon-fetcher/src/mastodon_fetcher/: __init__.py  api.py  constants.py  fetcher.py  main.py  secrets.py  sender.py  server.py
metrics-processor/: .gitignore  Dockerfile  README.md  api.py  constants.py  main.py  processor.py  pyproject.toml  sender.py  server.py
metrics-processor/prompts/: sentiment_analysis.txt
metrics-processor/src/metrics_processor/: __init__.py  api.py  constants.py  main.py  nodes.py  processor.py  sender.py  server.py  state.py
metrics-processor/src/metrics_processor/nodes/: __init__.py  generator.py  post_processor.py  pre_processor.py
metrics-processor/src/metrics_processor/utils/: json_utils.py
metrics-processor/tests/: dummy_posts.py  test_inference.py  test_visualization.py  utils.py
shared/server/: service_state.py
shared/shared/kafka/: constants.py  (+3 more)
terraform/: Makefile  README.md  main.tf
(+9 files in other folders)
