[project]
name = "metrics-processor"
version = "0.1.0"
description = "Metrics processor for analyzing and processing data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "fastapi",
    "kafka-python",
    "shared",
    "uvicorn",
]

[tool.uv.sources]
shared = { path = "../shared" }
